--- a/views/index.html
+++ b/views/index.html
@@ -54,8 +54,8 @@
         <div class="panel-heading">
           <div class="day-buttons">
             <button class="btn btn-circle day-btn">1</button>
-            <button class="btn btn-circle day-btn current-day">2</button>
-            <button class="btn btn-circle day-btn">3</button>
+            <!--<button class="btn btn-circle day-btn current-day">2</button>
+            <button class="btn btn-circle day-btn">3</button>-->
             <button class="btn btn-circle day-btn" id="day-add">+</button>
           </div>
         </div>
@@ -64,7 +64,7 @@
             <h4>My Hotel</h4>
             <ul class="list-group">
               <div class="itinerary-item">
-                <span class="title">Andaz Wall Street</span>
+                <!--<span class="title">Andaz Wall Street</span>-->
                 <button class="btn btn-xs btn-danger remove btn-circle">x</button>
               </div>
             </ul>
@@ -73,7 +73,7 @@
             <h4>My Restaurants</h4>
             <ul class="list-group">
               <div class="itinerary-item">
-                <span class="title">Bouley</span>
+                <!--<span class="title">Bouley</span>-->
                 <button class="btn btn-xs btn-danger remove btn-circle">x</button>
               </div>
             </ul>
@@ -82,7 +82,7 @@
             <h4>My Activities</h4>
             <ul class="list-group">
               <div class="itinerary-item">
-                <span class="title">Mahayana Buddhist Temple Association</span>
+                <!--<span class="title">Mahayana Buddhist Temple Association</span>-->
                 <button class="btn btn-xs btn-danger remove btn-circle">x</button>
               </div>
             </ul>
