--- a/views/layout.html
+++ b/views/layout.html
@@ -22,7 +22,7 @@
 					<span> Trip Planner!</span>
 				</a>
 			</div>
-			<div class="collapse navbar-collapse" id="mainnav">	
+			<div class="collapse navbar-collapse" id="mainnav">
 				<ul class="nav navbar-nav">
 					<li class="active">
 						<a href="/">Home</a>
@@ -39,5 +39,6 @@
 		{% block content %}
 		{% endblock %}
 		<script src="/js/main.js" defer></script>
+		<script src="/js/jquery.js" defer></script>
 	</body>
 </html>
