--- a/views/index.html
+++ b/views/index.html
@@ -56,29 +56,19 @@
                 <div class="panel-body" id="itinerary">
                     <div>
                         <h4>My Hotel</h4>
-                        <ul class="list-group">
-                            <div class="itinerary-item">
-                                <!--<span class="title">Andaz Wall Street</span>-->
-                                <button class="btn btn-xs btn-danger remove btn-circle">x</button>
-                            </div>
+                        <ul class="list-group hotels">
+
                         </ul>
                     </div>
                     <div>
                         <h4>My Restaurants</h4>
-                        <ul class="list-group">
-                            <div class="itinerary-item">
-                                <!--<span class="title">Bouley</span>-->
-                                <button class="btn btn-xs btn-danger remove btn-circle">x</button>
-                            </div>
+                        <ul class="list-group restaurants">
+
                         </ul>
                     </div>
                     <div>
                         <h4>My Activities</h4>
-                        <ul class="list-group">
-                            <div class="itinerary-item">
-                                <!--<span class="title">Mahayana Buddhist Temple Association</span>-->
-                                <button class="btn btn-xs btn-danger remove btn-circle">x</button>
-                            </div>
+                        <ul class="list-group activities">
                         </ul>
                     </div>
                 </div>
