refactored code in jquery.js

--- a/views/index.html
+++ b/views/index.html
@@ -32,7 +32,7 @@
 				<option>{{ activity.name }}</option>
 				{% endfor %}-->
 			</select>
-                        <button data-type="activities" data-action="add" class= btn btn-primary btn-circle pull-right">+</button>
+                        <button data-type="activities" data-action="add" class="btn btn-primary btn-circle pull-right">+</button>
                     </div>
                 </div>
             </div>
